--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/src/assets/images/vue.jpg" />
         <title>Hello World App</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
